--- a/src/assets/dashboard.html
+++ b/src/assets/dashboard.html
@@ -1,58 +1,55 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="shortcut icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <title>Pure JavaScript Excel</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="shortcut icon" href="favicon.ico" />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <title>Pure JavaScript Excel</title>
+  </head>
 
-<div id="app">
+  <body>
+    <div id="app">
+      <div class="db">
+        <div class="db__header">
+          <h1>Excel Dashboard</h1>
+        </div>
 
-  <div class="db">
+        <div class="db__new">
+          <div class="db__view">
+            <a href="#" class="db__create">
+              Новая <br />
+              Таблица
+            </a>
+          </div>
+        </div>
 
-    <div class="db__header">
-      <h1>Excel Dashboard</h1>
-    </div>
+        <div class="db__table db__view">
+          <div class="db__list-header">
+            <span>Название</span>
+            <span>Дата открытия</span>
+          </div>
 
-    <div class="db__new">
-      <div class="db__view">
-        <a href="#" class="db__create">
-          Новая <br /> Таблица
-        </a>
+          <ul class="db__list">
+            <li class="db__record">
+              <a href="#">Таблица номер 1</a>
+              <strong>12.06.2020</strong>
+            </li>
+
+            <li class='fbfgbgfb'>
+              <a href="#">Таблица номер 2</a>
+              <strong>12.06.2020</strong>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
-
-    <div class="db__table db__view">
-
-      <div class="db__list-header">
-        <span>Название</span>
-        <span>Дата открытия</span>
-      </div>
-
-      <ul class="db__list">
-
-        <li class="db__record">
-          <a href="#">Таблица номер 1</a>
-          <strong>12.06.2020</strong>
-        </li>
-
-        <li class="db__record">
-          <a href="#">Таблица номер 2</a>
-          <strong>12.06.2020</strong>
-        </li>
-
-      </ul>
-
-    </div>
-
-  </div>
-
-</div>
-
-</body>
+  </body>
 </html>
